2004-06-04  Radek Doulik  <rodo@ximian.com>

	* default/C/Inbox (Content-Type): added size info to IMG tags so
	that it loads the message smoother

2004-06-03  William Jon McCann  <mccann@jhu.edu>

	* mail-session.c (request_password): Don't pack entry and checkbox
	widgets directly into the dialog vbox so that they line up
	correctly with the action area buttons.

2004-06-02  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (mc_add_local_store_done): put this back in,
	local folders not being noted properly all the time.

2004-06-01  Jeffrey Stedfast  <fejj@novell.com>

	* em-composer-utils.c (forward_non_attached): Don't attach
	anything ever. This is confusing way too many users who expect it
	to attach all or nothing. Since Forward-Attached is what users
	should be using to forward a message and all attachments, make
	these not attach anything (which is what other mailers do
	anyway). This wlso makes Forward-Quoted consistant with
	Reply-Quoted which is a Good Thing (tm).

2004-06-01  Not Zed  <NotZed@Ximian.com>

	* em-folder-selector.c (em_folder_selector_get_selected_uri): set
	the right path on the url.

	* mail-signature-editor.c (load_signature): ugh, unlike camel
	exceptions, you can't pass NULL to CORBA calls.
	(mail_signature_editor): ditto.  See bug #58815.

2004-05-28  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree.c (d): Disable debug here too - all this code has
	been working fine.

	* em-folder-selector.c (d): Disable debug spew here too (not that
	this debug was ever seen since it never hit those conditions).

	* mail-folder-cache.c (d): Disable debug here too.

	* em-folder-tree-model.c: Disable debug spewage that we don't need
	anymore. The amount of debug spewage on the console is getting to
	be too much to find anything.

	* em-folder-tree.c (emft_expand_node): Use p+1 as the full_name
	rather than p. Fixes bug #59187.

2004-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree.c (emft_get_folder_info__got): Instead of