@@ -1,3 +1,8 @@
+2004-06-05  Christian Neumair  <chris@gnome-de.org>
+
+	* mail-component.c (view_changed_cb): Use ngettext for message count
+	information.
+
 2004-06-04  Radek Doulik  <rodo@ximian.com>
 
 	* default/C/Inbox (Content-Type): added size info to IMG tags so
